microc/tests/expected/err-notlocal2.uc.out
../examples/err-notlocal2.uc:[6:6]: execution error: Non-pointer (FunVal(f(){...}:1:1)) pointer dereference
      *f=10; // error: not a pointer
       ^

1
